--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "serve ."
   },
   "dependencies": {
-    "phaser": "^3.55.2"
+    "phaser": "^3.*"
   },
   "keywords": [],
   "repository": {
