--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "start": "serve ."
   },
   "dependencies": {
-    "phaser": "^3.*"
+    "201flaviosilva-utils": "^1.2.5",
+    "phaser": "^3.55.2"
+  },
+  "devDependencies": {
+    "serve": "^13.0.4"
   },
   "keywords": [],
   "repository": {
